--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,15 @@
-attrs @ file:///croot/attrs_1734533101012/work
-beautifulsoup4 @ file:///work/perseverance-python-buildout/croot/beautifulsoup4-split_1728385754779/work
-Brotli @ file:///work/perseverance-python-buildout/croot/brotli-split_1728385783584/work
-certifi @ file:///io/buildout/croot/certifi_1735842370795/work/certifi
-charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
-exceptiongroup @ file:///work/perseverance-python-buildout/croot/exceptiongroup_1728488778948/work
-h11 @ file:///work/perseverance-python-buildout/croot/h11_1728386593025/work
-idna @ file:///work/perseverance-python-buildout/croot/idna_1728385935861/work
-outcome @ file:///tmp/build/80754af9/outcome_1609338780791/work
-PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1728386193338/work
-requests @ file:///croot/requests_1730999120400/work
-selenium @ file:///home/conda/feedstock_root/build_artifacts/selenium_1733158395291/work
-setuptools==75.1.0
-sniffio @ file:///work/perseverance-python-buildout/croot/sniffio_1728386342155/work
-sortedcontainers @ file:///tmp/build/80754af9/sortedcontainers_1623949099177/work
-soupsieve @ file:///work/perseverance-python-buildout/croot/soupsieve_1728385708765/work
-trio @ file:///io/perseverance-python-buildout/croot/trio_1731705000683/work
-trio-websocket @ file:///home/conda/feedstock_root/build_artifacts/trio-websocket_1734276601048/work/dist
-typing_extensions @ file:///croot/typing_extensions_1734714854207/work
-urllib3 @ file:///work/perseverance-python-buildout/croot/urllib3_1728386864107/work
-websocket-client @ file:///work/perseverance-python-buildout/croot/websocket-client_1728386934860/work
-wheel==0.44.0
-wsproto @ file:///work/perseverance-python-buildout/croot/wsproto_1728401611169/work
+attrs==25.1.0
+certifi==2024.12.14
+h11==0.14.0
+idna==3.10
+outcome==1.3.0.post0
+PySocks==1.7.1
+selenium==4.28.1
+sniffio==1.3.1
+sortedcontainers==2.4.0
+trio==0.28.0
+trio-websocket==0.11.1
+typing_extensions==4.12.2
+urllib3==2.3.0
+websocket-client==1.8.0
+wsproto==1.2.0
